--- a/package.json
+++ b/package.json
@@ -1,64 +1,62 @@
 {
-  "name": "todo-task",
+  "name": "todo-task-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest",
+    "test:ci": "jest --ci"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "axios": "^0.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
+    "antd": "^4.19.2",
+    "axios": "^0.26.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "next": "10.2.0",
+    "next-images": "^1.7.0",
+    "next-redux-wrapper": "^6.0.2",
+    "nprogress": "^0.2.0",
+    "prettier": "^2.3.0",
+    "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.3",
-    "typesafe-actions": "^5.1.0",
-    "typescript": "^4.6.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "styled-components": "^5.3.0",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.23",
-    "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-logger": "^3.0.9",
-    "@types/redux-persist": "^4.3.1",
-    "@types/styled-components": "^5.1.24",
-    "@types/uuid": "^8.3.4"
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/node": "^15.3.0",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "^17.0.5",
+    "@types/react-redux": "^7.1.16",
+    "@types/styled-components": "^5.1.9",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "react-test-renderer": "^17.0.2",
+    "svg-react-loader": "^0.4.6",
+    "typescript": "^4.2.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "npx prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
