--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "noImplicitAny": false,
     "baseUrl": ".",
     "paths": {
       "@pages/*": ["pages/*"],
@@ -26,12 +25,6 @@
       "@utils/*": ["utils/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "./setupTests.ts",
-    "./node_modules/redux-persist/types"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./setupTests.ts"],
   "exclude": ["node_modules"]
 }
