--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
+    "test": "jest --watch",
     "test:ci": "jest --ci"
   },
   "dependencies": {
@@ -29,9 +29,12 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
+    "ts-jest": "^26.5.6",
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@types/node": "^15.3.0",
@@ -47,8 +50,12 @@
     "lint-staged": "^10.5.3",
     "react-test-renderer": "^17.0.2",
     "svg-react-loader": "^0.4.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.1.6"
   },
+  "moduleDirectories": [
+    "node_modules",
+    "src"
+  ],
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "npx prettier --write"
